--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
           command: |
             set -exu
             ~/workspace/cc-test-reporter before-build
-            coverage run -m unittest
+            pytest --cov
             coverage xml
             ~/workspace/cc-test-reporter format-coverage --output coverage/<< parameters.python-version >>.json
       - persist_to_workspace:
@@ -53,7 +53,7 @@ jobs:
           name: Upload coverage
           command: |
             set -exu
-            ~/workspace/cc-test-reporter sum-coverage ~/workspace/coverage/*.json -p 8
+            ~/workspace/cc-test-reporter sum-coverage ~/workspace/coverage/*.json -p 6
             ~/workspace/cc-test-reporter upload-coverage
 
 workflows:
@@ -66,8 +66,6 @@ workflows:
           matrix:
             parameters:
               python-version:
-                - "3.6.10"
-                - "3.6.14"
                 - "3.7.4"
                 - "3.7.11"
                 - "3.8.0"
