--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -20,6 +20,8 @@ pluggy==1.0.0
     # via pytest
 py==1.11.0
     # via pytest
+pycryptodome==3.12.0
+    # via stream-unzip
 pyparsing==3.0.6
     # via packaging
 pytest==6.2.5
@@ -27,6 +29,10 @@ pytest==6.2.5
     #   -r requirements-dev.in
     #   pytest-cov
 pytest-cov==3.0.0
+    # via -r requirements-dev.in
+stream-inflate==0.0.14
+    # via stream-unzip
+stream-unzip==0.0.67
     # via -r requirements-dev.in
 toml==0.10.2
     # via pytest
