--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,3 +3,11 @@ repo_url: https://github.com/uktrade/stream-zip
 theme:
   name: tech_docs_template
   logo: assets/dit.png
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
