docs: dit favicon

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,8 @@ site_name: stream-zip
 repo_url: https://github.com/uktrade/stream-zip
 theme:
   name: tech_docs_template
-  logo: assets/dit.png
+  logo: assets/dit-logo.png
+  favicon: assets/dit-favicon.png
   features:
     - content.code.copy
 markdown_extensions:
