--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ theme:
   favicon: assets/dit-favicon.png
   features:
     - content.code.copy
+    - navigation.sections
 markdown_extensions:
   - pymdownx.highlight:
       anchor_linenums: true
@@ -19,10 +20,13 @@ markdown_extensions:
 plugins:
   - material/search
 nav:
-    - Introduction: 'index.md'
+  - Introduction: 'index.md'
+  - Usage:
     - Getting started: 'getting-started.md'
     - Advanced usage: 'advanced-usage.md'
     - Limitations: 'limitations.md'
     - Recipes: 'recipes.md'
     - Exceptions: 'exceptions.md'
-    - Contributing: 'contributing.md'
+
+  - Contributing:
+    - How to contribute: 'contributing.md'
