fix: 'Inappropriate file type or format' in Archive Utility and bsdcpio
This reverts commit 1130fdcb5f8a068c194392fdf5b0d8b6769a8928, "feat: no need
for local zip64 extra when streaming"

It was thought that there was no need for the ZIP_64 "extra" section in the
local header. Tests ran fine without it, and there was an argument that having
it made the ZIP file invalid at
https://github.com/libarchive/libarchive/issues/1834. However, it was found in
https://github.com/uktrade/stream-zip/issues/27 that it caused an error on
OSX's Archive Utility:

> Error 79 - Inappropriate file type or format

and a very similar error in libarchive's bsdcpio

> cpio: Inconsistent uncompressed size: 12 in central directory, 4294967295 in
> local header: Inappropriate file type or format

or in some situations

> cpio: ZIP uncompressed data is wrong size (read 12, expected 0)

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,7 +38,10 @@ jobs:
         with:
           name: reporter
           path: ./reporter
-      - name: "Install dependencies"
+      - name: "Install bsdcpio"
+        run: |
+          ./install-libarachive.sh
+      - name: "Install python dependencies"
         run: |
           pip install -r requirements-dev.txt
           chmod +x ./reporter/cc-test-reporter
