build(deps): bump mkdocs-tech-docs-template
This allows us to not have our own CSS, and tidies up the blue bar

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,9 +7,7 @@ theme:
   favicon: assets/dit-favicon.png
   features:
     - content.code.copy
-    - navigation.sections
-extra_css:
-  - assets/dit-extra.css
+    - navigation.sectionsa
 markdown_extensions:
   - pymdownx.highlight:
       anchor_linenums: true
