docs: update publishing a release instructions

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,4 +33,4 @@ nav:
 
   - Contributing:
     - How to contribute: 'contributing.md'
-    - How to make a release: 'making-a-release.md'
+    - How to publish a release: 'publish-a-release.md'
