--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,5 @@
-name: Tests
+name: Test
+
 on:
   push:
     branches: [ "main" ]
@@ -7,9 +8,10 @@ on:
 
 jobs:
   download:
+    name: Download coverage reporter
     runs-on: ubuntu-latest
     steps:
-      - name: "Download and save code coverage reporter"
+      - name: "Download coverage reporter"
         run: |
           mkdir -p ./reporter
           curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./reporter/cc-test-reporter
@@ -19,7 +21,7 @@ jobs:
           path: ./reporter/cc-test-reporter
 
   test:
-    name: Test
+    name: Run tests
     needs: download
     strategy:
       matrix:
@@ -44,7 +46,8 @@ jobs:
       - uses: "actions/setup-python@v4"
         with:
           python-version: '${{ matrix.python-version }}'
-      - uses: actions/download-artifact@v3
+      - name: "Fetch reporter"
+        uses: actions/download-artifact@v3
         with:
           name: reporter
           path: ./reporter
@@ -60,16 +63,18 @@ jobs:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         run: |
           ./reporter/cc-test-reporter before-build
-      - name: "Test"
+      - name: "Run tests"
         run: |
           pytest --cov
           coverage xml
           ./reporter/cc-test-reporter format-coverage --output ./coverage/${{ matrix.python-version }}.json
-      - uses: actions/upload-artifact@v3
+      - name: "Save coverage report"
+        uses: actions/upload-artifact@v3
         with:
           name: coverage
           path: ./coverage/*.json
   upload:
+    name: "Upload code coverage report to Code Climate"
     runs-on: ubuntu-latest
     needs: test
     steps:
