--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -5,20 +5,28 @@ on:
     branches:
       - main
 
-permissions:
-  contents: write
-
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
           python-version: 3.11
-      - uses: actions/cache@v2
-        with:
-          key: ${{ github.ref }}
-          path: .cache
       - run: pip install -r requirements-docs.txt
-      - run: mkdocs gh-deploy --force
+      - run: mkdocs build --site-dir _site
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v2
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
