--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,24 +7,12 @@ on:
     branches: [ "main" ]
 
 jobs:
-  download:
-    name: Download coverage reporter
-    runs-on: ubuntu-latest
-    steps:
-      - name: "Download coverage reporter"
-        run: |
-          mkdir -p ./reporter
-          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./reporter/cc-test-reporter
-      - uses: actions/upload-artifact@v3
-        with:
-          name: reporter
-          path: ./reporter/cc-test-reporter
-
   test:
     name: Run tests
-    needs: download
     strategy:
       matrix:
+        # If changing how many times tests are run, must also change in codecov.yml
+        # to ensure test coverage is reported only after all tests have finished
         include:
           - python-version: "3.6.7"
             os: "ubuntu-20.04"
@@ -43,44 +31,13 @@ jobs:
       - uses: "actions/setup-python@v4"
         with:
           python-version: '${{ matrix.python-version }}'
-      - name: "Fetch reporter"
-        uses: actions/download-artifact@v3
-        with:
-          name: reporter
-          path: ./reporter
       - name: "Install bsdcpio"
         run: |
           ./install-libarachive.sh
       - name: "Install python dependencies"
         run: |
           pip install ".[ci]"
-          chmod +x ./reporter/cc-test-reporter
-      - name: "Notify code climate of pending coverage upload"
-        env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-        run: |
-          ./reporter/cc-test-reporter before-build
       - name: "Run tests"
         run: |
           pytest --cov
-          coverage xml
-          ./reporter/cc-test-reporter format-coverage --output ./coverage/${{ matrix.python-version }}.json
-      - name: "Save coverage report"
-        uses: actions/upload-artifact@v3
-        with:
-          name: coverage
-          path: ./coverage/*.json
-  upload:
-    name: "Upload code coverage report to Code Climate"
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - uses: actions/download-artifact@v3
-      - name: "Upload coverage"
-        env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-        run: |
-          ls -R
-          chmod +x ./reporter/cc-test-reporter
-          ./reporter/cc-test-reporter sum-coverage ./coverage/*.json -p 5
-          ./reporter/cc-test-reporter upload-coverage
+      - uses: codecov/codecov-action@v3
