docs: document how to make an async interface
This was discussed in https://github.com/uktrade/stream-zip/issues/87. Maybe
down the line this code will be brought into stream-zip, or an interface
created that doesn't use threads under the hood. However for now, documenting
how to work with what there is I think is the quickest/easiest step forward.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,7 @@ nav:
     - Methods: 'methods.md'
     - Input examples: 'input-examples.md'
     - Output examples: 'output-examples.md'
+    - Async interface: 'async-interface.md'
     - Exceptions: 'exceptions.md'
 
   - Contributing:
