refactor: initial type annotations
Inspired by the discussion at
https://github.com/uktrade/stream-zip/discussions/120 adding in a few type
annotations.

Keeping it minimal for the first pass just to get things in. Expecting
more/stricter types/checking in later changes.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,6 +48,9 @@ jobs:
       - name: "Install python dependencies"
         run: |
           pip install ".[ci]"
+      - name: "Run type checking"
+        run: |
+          mypy stream_zip.py
       - name: "Run tests"
         run: |
           pytest --cov
