--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ dev = [
     "pytest-cov>=3.0.0",
     "stream-unzip>=0.0.86",
     "pyzipper>=0.3.6",
+    # Type checking
+    "mypy>=0.971",
+    'types-contextvars>=2.4.7.3; python_version<"3.7"',
 ]
 ci = [
     "pycryptodome==3.10.1",
@@ -35,6 +38,9 @@ ci = [
     "pytest-cov==3.0.0",
     "stream-unzip==0.0.86",
     "pyzipper==0.3.6",
+    # Type checking
+    "mypy==0.971",
+    'types-contextvars==2.4.7.3; python_version<"3.7"',
 ]
 
 [project.urls]
