--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,7 +50,7 @@ jobs:
           pip install ".[ci]"
       - name: "Run type checking"
         run: |
-          mypy stream_zip.py
+          mypy stream_zip.py --strict
       - name: "Run tests"
         run: |
           pytest --cov
