feat: enable type checking in client code
By moving to a package layout with a "py.typed" file, this means that usage of
stream-zip should be able to be type checked.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,7 +50,7 @@ jobs:
           pip install ".[ci]"
       - name: "Run type checking"
         run: |
-          mypy stream_zip.py --strict
+          mypy stream_zip --strict
       - name: "Run tests"
         run: |
           pytest --cov
