--- a/.github/workflows/deploy-package-to-pypi.yml
+++ b/.github/workflows/deploy-package-to-pypi.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           touch "${GITHUB_REF_NAME}.tar.gz"
           tar --exclude='.git' --exclude='${GITHUB_REF_NAME}.tar.gz' -czvf "${GITHUB_REF_NAME}.tar.gz" .
-          gh release upload "${GITHUB_REF_NAME}" "${GITHUB_REF_NAME}.tar.gz" "Source code (with release version)"
+          gh release upload "${GITHUB_REF_NAME}" "${GITHUB_REF_NAME}.tar.gz#Source code (with release version)"
           rm "${GITHUB_REF_NAME}.tar.gz"
         env:
           GH_TOKEN: ${{ github.token }}
