--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,11 +24,17 @@ jobs:
             os: "ubuntu-20.04"
           - python-version: "3.10.0"
             os: "ubuntu-20.04"
+          - python-version: "3.11.0"
+            os: "ubuntu-20.04"
+          - python-version: "3.12.0"
+            os: "ubuntu-20.04"
+          - python-version: "3.13.0-rc.2"
+            os: "ubuntu-20.04"
     runs-on: ${{ matrix.os }}
     steps:
       - name: "Checkout"
         uses: "actions/checkout@v3"
-      - uses: "actions/setup-python@v4"
+      - uses: "actions/setup-python@v5"
         with:
           python-version: '${{ matrix.python-version }}'
       - name: "Install bsdcpio"
@@ -47,7 +53,7 @@ jobs:
           )
       - name: "Install python dependencies"
         run: |
-          pip install ".[ci]"
+          pip install ".[dev,ci]"
       - name: "Run type checking"
         run: |
           mypy stream_zip --strict
