build: move tests to ubuntu 24.04
This necessary as github runners no longer have 20.04. This
also means dropping support for Python versions below 3.9 and
changing the mypy version in the ci dependencies to allow for
above 0.971

Co-authored-by: Michal Charemza <michal@charemza.name>
Co-authored-by: Benjamin Graham
<benjamin.graham@businessandtrade.gov.uk>
Co-authored-by: Sally.Mohamed
<Sally.Mohamed@businessandtrade.gov.uk>
Co-authored-by: Sekhar Panja <sekhar.panja@digital.trade.gov.uk>
Co-authored-by: Josef Smith <josef.smith@digital.trade.gov.uk>
Co-authored-by: Jack Swerdlow <jack.swerdlow@digital.trade.gov.uk>

Signed-off-by: DBT pre-commit check

--- a/.github/workflows/deploy-package-to-pypi.yml
+++ b/.github/workflows/deploy-package-to-pypi.yml
@@ -6,7 +6,10 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
 
@@ -44,7 +47,7 @@ jobs:
       url: https://pypi.org/project/stream-zip/
 
     name: upload release to PyPI
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     permissions:
       id-token: write
     steps:
