--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,28 +9,13 @@ on:
 jobs:
   test:
     name: Run tests
+    runs-on: "ubuntu-24.04"
     strategy:
       matrix:
         # If changing how many times tests are run, must also change in codecov.yml
         # to ensure test coverage is reported only after all tests have finished
-        include:
-          - python-version: "3.6.7"
-            os: "ubuntu-20.04"
-          - python-version: "3.7.1"
-            os: "ubuntu-20.04"
-          - python-version: "3.8.0"
-            os: "ubuntu-20.04"
-          - python-version: "3.9.0"
-            os: "ubuntu-20.04"
-          - python-version: "3.10.0"
-            os: "ubuntu-20.04"
-          - python-version: "3.11.0"
-            os: "ubuntu-20.04"
-          - python-version: "3.12.0"
-            os: "ubuntu-20.04"
-          - python-version: "3.13.0-rc.2"
-            os: "ubuntu-20.04"
-    runs-on: ${{ matrix.os }}
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+
     steps:
       - name: "Checkout"
         uses: "actions/checkout@v3"
